# ai-assistant

./: .audit_log  .cli_history  .env.example  .gitignore  ADVANCED_GUIDE.md  Dockerfile  Makefile  README.md  codellama  config.py  config.yaml  docker-compose.yml  logger.py  main.py  monitoring.py  pyproject.toml  pytest.ini  requirements.txt  requirements_a.txt  utils.py
analytics/: dashboard.py
core/: __init__.py  brain.py  ears.py  enhanced_memory.py  learning.py  memory.py  multimodal.py  proactive.py  rag.py  router.py  security.py  self_check.py  voice.py  voice_system.py
integrations/: __init__.py  calendar.py  email_client.py  media_controller.py  notifier.py  smart_home.py  todo_manager.py
security/: config.py  confirmation.py  policies.py  recovery.py
skills/: __init__.py  automation.py  base.py  coding.py  files.py  registry.py  system.py  web.py
tests/: __init__.py  conftest.py  test_advanced_features.py  test_basic.py  test_integration.py  test_learning.py  test_security.py  test_skills.py
tests/security/: test_security.py
ui/: __init__.py  animations.py  cli.py  formatters.py  input_handler.py  output_manager.py  shortcuts.py  themes.py  voice_cli.py
